--- a/step_7.html
+++ b/step_7.html
@@ -216,7 +216,7 @@
       <option name="99" id="99" value="99">99 Melo Drums Tempo Loop </option>
       <option name="100" id="100" value="100">100 B Beat re laburado Loop Song </option>
       <option name="101" id="101" value="101">101 Jijiji </option>
-
+      <option name="112" id="112" value="112">112 El cazador </option>
     </select>
 
     <label for="player">Player</label>
