Pre child append for FX 1

--- a/step_7.html
+++ b/step_7.html
@@ -103,6 +103,10 @@
 
 <body>
   <header>
+    <input id="files" type="file" accept="audio/mpeg, audio/vorbis">
+    <br>
+   <!-- <audio id="audio_tag_test_load_user_files" src="" controls></audio> -->
+    <br>
     <button id="consoleClear" onclick="consoleClear()"> consoleClear </button>
     <button id="playsTestSynth" onclick="playsTestSynth()"> playsTestSynth </button>
     <button id="creates_an_FX_Node" onclick="creates_an_FX_Node()"> creates an FX Node </button>
@@ -216,7 +220,7 @@
       <option name="99" id="99" value="99">99 Melo Drums Tempo Loop </option>
       <option name="100" id="100" value="100">100 B Beat re laburado Loop Song </option>
       <option name="101" id="101" value="101">101 Jijiji </option>
-      <option name="112" id="112" value="112">112 El cazador </option>
+      <option name="102" id="102" value="102">102 El cazador </option>
     </select>
 
     <label for="player">Player</label>
