--- a/dispose_example_tonejs3.html
+++ b/dispose_example_tonejs3.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>.dispose() example Tone JS</title>
+  <title>.dispose() example Tone JS 3</title>
   <style>
     body {
       font-family: Arial, sans-serif;
