Update 2 OSC STEREO PANNED.html

--- a/songs/2 OSC STEREO PANNED.html
+++ b/songs/2 OSC STEREO PANNED.html
@@ -16,7 +16,7 @@
   <br>
 
   <button onclick="startsSong()">Iniciar </button>
-  <script src="./js/2oscSTPanned.js">    </script>
-
+  <!-- <script src="./js/2oscSTPanned.js">    </script> -->
+<script src="https://github.com/Juliavra/Producer_E87_webSite/blob/main/js/2oscSTPanned.js">  </script>
 </body>
 </html>
