Update 2 OSC STEREO PANNED.html

--- a/songs/2 OSC STEREO PANNED.html
+++ b/songs/2 OSC STEREO PANNED.html
@@ -15,7 +15,7 @@
 </h1>
   <br>
 
-  <button onclick="startOscillator()">Iniciar </button>
+  <button onclick="startOscillator()">Play </button>
   <!-- <script src="./js/2oscSTPanned.js">    </script> -->
 <script src="https://github.com/Juliavra/Producer_E87_webSite/js/2oscSTPanned.js">  </script>
 </body>
