--- a/songs/2 OSC STEREO PANNED.html
+++ b/songs/2 OSC STEREO PANNED.html
@@ -17,6 +17,6 @@
 
   <button onclick="startsSong()">Play </button>
   <!-- <script src="js/2oscSTPanned.js">    </script> -->
-<script src="songs/js/2oscSTPanned.js">  </script>
+<script src="js/2oscSTPanned.js">  </script>
 </body>
 </html>
