--- a/songs/2 OSC STEREO PANNED.html
+++ b/songs/2 OSC STEREO PANNED.html
@@ -15,7 +15,7 @@
 </h1>
   <br>
 
-  <button id="playsSong" onclick="startsSong()">Play </button>
+  <button id="playsSong" onclick="startOscillator()">Play </button>
   <!-- <script src="js/2oscSTPanned.js">    </script> -->
 <script src="https://github.com/Juliavra/Producer_E87_webSite/songs/js/2oscSTPanned.js">  </script>
  
