create songs folder

--- a/toyz.html
+++ b/toyz.html
@@ -42,7 +42,7 @@
         <br>
         <a href="songs/latest.html"> Latest</a>
         <br>
-
+        <a href="songs/WEBAUDIOAPI.html"> WEBAUDIOAPI Voice</a>
       </nav>
 
 </body>
