create songs folder

--- a/step_7.html
+++ b/step_7.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 
+    <!--
+    <h2>Jugamos como nunca, perdimos como siempre</h2>
+    <h2> nuestras nadas poco difieren </h2>
+    -->
+
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
