create songs folder

--- a/toyz.html
+++ b/toyz.html
@@ -7,10 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
-  <!--
-  <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
- -->
-  <link rel="STYLESHEET" href="css/brazil.css">
+  <link rel="STYLESHEET" href="css/estilos.css">
   <link rel="icon" href="img/html.ico">
   <!--  -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
